; ModuleID = '/home/carl/AnghaBench/git/extr_rerere.c_rerere_dir_hash.c'
source_filename = "/home/carl/AnghaBench/git/extr_rerere.c_rerere_dir_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rerere_dir = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i8*)* @rerere_dir_hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @rerere_dir_hash(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.rerere_dir**, align 8
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.rerere_dir**
  store %struct.rerere_dir** %7, %struct.rerere_dir*** %5, align 8
  %8 = load %struct.rerere_dir**, %struct.rerere_dir*** %5, align 8
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds %struct.rerere_dir*, %struct.rerere_dir** %8, i64 %9
  %11 = load %struct.rerere_dir*, %struct.rerere_dir** %10, align 8
  %12 = getelementptr inbounds %struct.rerere_dir, %struct.rerere_dir* %11, i32 0, i32 0
  %13 = load i8*, i8** %12, align 8
  ret i8* %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
